--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 #
 #
+# ===== vs code =====
+#
+#
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+#
+#
 # ===== cmake =====
 #
 #
@@ -81,5 +99,6 @@ dkms.conf
 #
 #
 
+interruption.csv
 temp.csv
 temp.highest
